more tests of Blame and getters of Balme.Hunk